syntax = "proto3";
package hello;
option go_package=".;hello";

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}

service HelloService {
    rpc SayHello(HelloRequest) returns (HelloReply) {}
    rpc SayHelloAgain(HelloRequest) returns (HelloReply) {} 
}